end-product-not-good-js

--- a/countdown-timer/main.html
+++ b/countdown-timer/main.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>countdown-time</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>HAPPY NEW YEAR</h1>
-        <main>
-            <h2>Happy New Year In <span id="time">00:00:00</span></h2>
-        </main>
-    </body>
+   <meta charset="UTF-8"/>
+   <head>
+	  <title>countdown-time</title>
+	  <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+	  <h1>HAPPY NEW YEAR</h1>
+	  <main>
+		 <h2>Happy New Year In </h2>
+		 <span>
+			</div>
+			<div class="month-c" id="month-c">
+
+			   <p class="month" id="month">0</p>
+			   <span>Month</span>
+			</div>
+
+			<div class="day-c" id="day-c">
+
+			   <p class="day" id="day">0</p>
+			   <span>Day</span>
+			</div>
+
+			<div class="hour-c" id="hour-c">
+
+			   <p class="hour" id="hour">0</p>
+			   <span>Hours</span>
+			</div>
+
+		 </span>
+
+
+	  </main>
+	  <script src="script.js" defer></script>
+   </body>
 </html>
