--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -8,30 +8,30 @@
    </head>
    <body class="main">
 	  <main class="quiz-container" id="quiz-c">
-		 <h2>Question-text</h2>
+		 <h2 class="Question-head" id="Question">Question</h2>
 
 		 <ul>
 			<li>
 			   <input type="radio" id="a" name="quiz-op">
-			   <label for="a">option-a</label>
+			   <label id="a_text"for="a">option-a</label>
 			</li>
 
 			<li>
 			   <input type="radio" id="b" name="quiz-op">
-			   <label for="b">option-b</label>
+			   <label id="b_text" for="b">option-b</label>
 			</li>
 
 			<li>
 			   <input type="radio" id="c" name="quiz-op">
-			   <label for="c">option-c</label>
+			   <label id="c_text" for="c">option-c</label>
 			</li>
 
 			<li>
 			   <input type="radio" id="d" name="quiz-op">
-			   <label for="d">option-d</label>
+			   <label id="d_text" for="d">option-d</label>
 			</li>
 		 </ul>
-		 <button>Submit</button>
+		 <button id="btn">Submit</button>
 	  </main>
 	  <script src="script.js" defer ></script>
    </body>
