--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -12,7 +12,7 @@
 
 		 <ul>
 			<li>
-			   <input type="radio" id="a" name="quiz-op">
+			   <input type="radio" id="a" name="quiz-op" value="">
 			   <label id="a_text"for="a">option-a</label>
 			</li>
 
