feat: show info when i button clicked

--- a/recipe-app/index.html
+++ b/recipe-app/index.html
@@ -24,12 +24,13 @@
             </div>
 
             <div class="meals" id="meals">
-                
-        </div>
 
-        <script src="script.js"  defer></script>
+            </div>
+            <div class="class-pop-up deactive" id='id-pop-up'> 
 
+            </div>
 
+            <script src="script.js"  defer></script>
     </body>
 
-
+</html>
